# Software-engineering

./: .gitignore
task_1/: CMakeLists.txt  README.md  main.cpp
task_1/MainWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
task_2/: CMakeLists.txt  README.md
task_2/sources/: CMakeLists.txt  main.cpp
task_2/sources/MouseHandler/: mousehandler.cpp  mousehandler.hpp  mousehandler.ui
task_2/sources/Multimedia/: multimedia.cpp  multimedia.hpp
task_2/sources/Multimedia/RenderArea/: renderarea.cpp  renderarea.hpp
task_2/sources/mainwindow/: mainwindow.cpp  mainwindow.hpp  mainwindow.ui
task_2/sources/resources/: resource.qrc
